HHH-15328 Add support for CTE WITH clause